Fix collapsing margins

--- a/my.css
+++ b/my.css
@@ -10,7 +10,8 @@ h1, h2 {
 }
 
 h3 {
-  margin-top: 40px;
+  line-height: 300%;
+  margin-bottom: -15px;
 }
 
 /* Keyboard shortcuts notation */
